--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "homepage": "https://github.com/SudoDotDog/Sudoo-Title#readme",
   "devDependencies": {
-    "@sudoo/io": "^1.8.0",
+    "@sudoo/build-utils": "^1.0.0",
+    "@sudoo/license": "^1.1.0",
     "@sudoo/mock": "^1.5.0",
     "@sudoo/triforce": "^2.9.29"
   },
