--- a/typescript/tsconfig.build.json
+++ b/typescript/tsconfig.build.json
@@ -8,11 +8,15 @@
         "experimentalDecorators": true,
         "outDir": "../app",
         "lib": [
-            "dom",
-            "es5",
-            "es2015",
-            "es2016",
-            "es2017"
+            "DOM",
+            "ES5",
+            "ES2015",
+            "ES2016",
+            "ES2017",
+            "ES2018",
+            "ES2019",
+            "ES2020",
+            "ESNext"
         ],
         "module": "commonjs",
         "moduleResolution": "node",
@@ -23,7 +27,7 @@
         "resolveJsonModule": true,
         "strict": true,
         "strictNullChecks": true,
-        "target": "es6"
+        "target": "ES2020"
     },
     "exclude": [
         "../node_modules",
